--- a/KosaESS/src/main/resources/static/css/admin/inquiry_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/inquiry_list.css
@@ -175,3 +175,7 @@
 .inquiry_check, .inquiry_num, .inquiry_file {
 	text-align: center;
 }
+
+.inquiry_check, .inquiry_num, .inquiry_file img {
+	width: 15px;
+}
