--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -22,8 +22,8 @@
 			<div class="title">문의사항 관리</div>
 			<!-- Route -->
 			<div class="route">
-				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/inquiry/list}">문의사항
-					관리</a>
+				<a th:href="@{/admin}">대시보드</a> > <a
+					th:href="@{/admin/inquiry/list}">문의사항 관리</a>
 			</div>
 		</div>
 		<!-- Content Top -->
@@ -35,14 +35,14 @@
 				<!-- 문의사항 명 -->
 				<div class="filter_box">
 					<div class="filter_box_title">
-						<select class="search_input">
-							<option th:value="title" th:text="제목"></option>
-							<option th:value="content" th:text="내용"></option>
+						<select class="search_input_category">
+							<option th:value="post_title" th:text="제목"></option>
+							<option th:value="post_content" th:text="내용"></option>
 						</select>
 					</div>
 					<div>
-						<input class="search_input_title" id="class_name" value="" type="text" list="search_option"
-							required>
+						<input class="search_input" id="search_input" value="" type="text"
+							list="search_option" required>
 					</div>
 				</div>
 
@@ -68,7 +68,8 @@
 					onclick="resetInput()">
 					<img th:src="@{/img/reset_white.png}"> <span>초기화</span>
 				</button>
-				<button type="button" id="search_btn" class="search_filter_btn">
+				<button type="button" id="search_btn" class="search_filter_btn"
+					onclick="search()">
 					<img th:src="@{/img/search_white.png}"> <span>조회</span>
 				</button>
 			</div>
@@ -87,7 +88,7 @@
 				</div>
 				<div class="content_info_btn_wrap">
 					<!-- 선택삭제 버튼 -->
-					<button type="button"  id="delete_btn">
+					<button type="button" id="delete_btn">
 						<img th:src="@{/img/minus_white.png}"><span>선택삭제</span>
 					</button>
 				</div>
@@ -111,15 +112,16 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="inquiry, iterStat: ${inquiryList}">
-							<td class="inquiry_check" style="text-align: center;"><input
-								class="input_check" type="checkbox" name="chk"
-								th:value="${inquiry.postId}"></td>
+						<tr class="content_list_td"
+							th:each="inquiry, iterStat: ${inquiryList}">
+							<td class="inquiry_check"><input class="input_check"
+								type="checkbox" name="chk" th:value="${inquiry.postId}"></td>
 							<td class="inquiry_num" th:text="${iterStat.index + 1}"></td>
 							<td th:text="${inquiry.postId}"></td>
-							<td><a th:href="@{/admin/inquiry/view/__${inquiry.postId}__}"
+							<td><a
+								th:href="@{/admin/inquiry/view/__${inquiry.postId}__}"
 								th:text="${inquiry.postTitle}"></a></td>
-							<td class="inquiry_file"><img style="width: 15px;"
+							<td class="inquiry_file"><img
 								th:if="${inquiry.fileId!=null}" class="file_img"
 								th:src="@{/img/file.png}"></td>
 							<td th:text="${inquiry.rgsterId}"></td>
@@ -135,69 +137,211 @@
 		<!-- Content Bottom-->
 	</div>
 	<script>
-	//전체 선택
-	document.addEventListener("DOMContentLoaded", function() {
-		const chkAll = document.getElementById("chkAll");
-		const checkboxes = document
-				.querySelectorAll('input[type="checkbox"][name="chk"]');
+		//전체 선택
+		document.addEventListener("DOMContentLoaded", function() {
+			const chkAll = document.getElementById("chkAll");
+			const checkboxes = document
+					.querySelectorAll('input[type="checkbox"][name="chk"]');
 
-		chkAll.addEventListener("change", function() {
-			checkboxes.forEach(function(checkbox) {
-				checkbox.checked = chkAll.checked;
+			chkAll.addEventListener("change", function() {
+				checkboxes.forEach(function(checkbox) {
+					checkbox.checked = chkAll.checked;
+				});
 			});
 		});
-	});
-	
-	//선택삭제
-	document.querySelector("#delete_btn").addEventListener(
-			"click",
-			function() {
-				var selectedInquiryIds = [];
 
-				// 선택된 체크박스를 모두 선택합니다.
-				var selectedCheckboxes = document
-						.querySelectorAll(".input_check:checked");
+		//선택삭제
+		document.querySelector("#delete_btn").addEventListener(
+				"click",
+				function() {
+					var selectedInquiryIds = [];
 
-				// 선택된 체크박스의 값을 배열에 추가합니다.
-				selectedCheckboxes.forEach(function(checkbox) {
-					selectedInquiryIds.push(checkbox.value);
+					// 선택된 체크박스를 모두 선택합니다.
+					var selectedCheckboxes = document
+							.querySelectorAll(".input_check:checked");
+
+					// 선택된 체크박스의 값을 배열에 추가합니다.
+					selectedCheckboxes.forEach(function(checkbox) {
+						selectedInquiryIds.push(checkbox.value);
+					});
+
+					console.log(selectedInquiryIds);
+					// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
+					$.ajax({
+						url : '/admin/inquiry/delete',
+						method : 'POST',
+						data : {
+							selectedInquiryIds : selectedInquiryIds
+						},
+						success : function(response) {
+							console.log(response);
+							if (response == "success") {
+								alert("선택한 문의가 삭제되었습니다.");
+								window.location.href = "/admin/inquiry/list";
+							}
+						}
+					});
 				});
 
-				console.log(selectedInquiryIds);
-				// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
+		//초기화 버튼
+		function resetInput() {
+			// 모든 요소를 선택
+			const inputElement1 = document.querySelector(".search_input_category");
+			inputElement1.value = "post_title";
+
+			// 모든 요소를 선택
+			const inputElement2 = document.querySelector(".search_input");
+			inputElement2.value = "";
+
+			// 모든 요소를 선택
+			const inputElement3 = document
+					.querySelector(".search_input_status");
+			inputElement3.value = "all";
+		}
+		
+		
+		//조회 버튼
+		function search() {
+			//input값 비어있으면 모두 입력하라고 알리기
+			var searchInput = document.querySelector("#search_input").value;
+			if (searchInput.value === null) {
+				alert("모든 요소를 입력하세요.");
+			} else {
+				var searchInputCategory = document
+						.querySelector(".search_input_category").value;
+				var searchInputStatus = document
+						.querySelector(".search_input_status").value;
+
+				console.log(searchInput + searchInputCategory
+						+ searchInputStatus);
+
+				var postStatusList = [];
+				if (searchInputStatus == "all") {
+					postStatusList.push('PST0000003');
+					postStatusList.push('PST0000004');
+					console.log(postStatusList);
+				} else {
+					postStatusList.push(searchInputStatus);
+					console.log(postStatusList);
+				}
+
 				$.ajax({
-					url : '/admin/inquiry/delete',
+					url : '/admin/inquiry/search',
 					method : 'POST',
 					data : {
-						selectedInquiryIds : selectedInquiryIds
+						searchInputCategory : searchInputCategory,
+						searchInput : searchInput,
+						postStatusList : postStatusList
 					},
 					success : function(response) {
-						console.log(response);
-						if (response == "success") {
-							alert("선택한 문의가 삭제되었습니다.");
-							window.location.href = "/admin/inquiry/list";
+						console.log("성공");
+						var inquiryList = response.inquiryList;
+
+						// tbody 요소 찾기
+						var tbody = document.querySelector("tbody");
+
+						// tbody 내용 지우기
+						while (tbody.firstChild) {
+							tbody.removeChild(tbody.firstChild);
+						}
+
+						// inquiryList를 이용하여 새로운 tr 요소 추가
+						for (var i = 0; i < inquiryList.length; i++) {
+							var inquiry = inquiryList[i];
+
+							//tr 생성
+							var tr = document.createElement("tr");
+							tr.className = "content_list_td";
+
+							// td 요소 추가 및 값 설정
+
+							//input type="check"
+							var tdCheck = document.createElement("td");
+							tdCheck.className = "inquiry_check";
+							var inputCheck = document.createElement("input");
+							inputCheck.className = "input_check";
+							inputCheck.type = "checkbox";
+							inputCheck.name = "chk";
+							inputCheck.value = inquiry.postId;
+							tdCheck.appendChild(inputCheck);
+							tr.appendChild(tdCheck);
+
+							//num
+							var tdNum = document.createElement("td");
+							tdNum.className = "inquiry_num";
+							tdNum.textContent = i + 1;
+							tr.appendChild(tdNum);
+
+							//postId
+							var tdPostId = document.createElement("td");
+							tdPostId.textContent = inquiry.postId;
+							tr.appendChild(tdPostId);
+
+							//inquiryTitle
+							var tdPostTitle = document.createElement("td");
+							var aPostTitle = document.createElement("a");
+							aPostTitle.className = "inquiry_title";
+							aPostTitle.href = "/admin/inquiry/view/"
+									+ inquiry.postId;
+							aPostTitle.textContent = inquiry.postTitle;
+							tdPostTitle.appendChild(aPostTitle);
+							tr.appendChild(tdPostTitle);
+
+							//file
+							var tdFile = document.createElement("td");
+							tdFile.className = "inquiry_file";
+							if (inquiry.fileId != null) {
+								var fileImg = document.createElement("img");
+								fileImg.className = "file_img";
+								fileImg.src = "/img/file.png";
+								tdFile.appendChild(fileImg);
+							}
+							tr.appendChild(tdFile);
+							
+							//rgsterId
+							var tdRgster = document.createElement("td");
+							tdRgster.textContent=inquiry.rgsterId;
+							tr.appendChild(tdRgster);
+							
+							//rgstDt
+							var tdRgstDt = document.createElement("td");
+							tdRgstDt.textContent = formatTimestamp(inquiry.rgstDt);
+							tr.appendChild(tdRgstDt);
+							
+							//hits
+							var tdHit = document.createElement("td");
+							tdHit.textContent = inquiry.postHit;
+							tr.appendChild(tdHit);
+							
+							//status
+							var tdStatus = document.createElement("td");
+							tdStatus.textContent= inquiry.cmcdNm;
+							tr.appendChild(tdStatus);
+
+							tbody.appendChild(tr);
 						}
 					}
 				});
-			});
-	
-	
-	//초기화 버튼
-	function resetInput() {
-		// 모든 요소를 선택
-		const inputElement1 = document.querySelector(".search_input");
-		inputElement1.value = "title";
 
-		// 모든 요소를 선택
-		const inputElement2 = document
-				.querySelector(".search_input_title");
-		inputElement2.value = "";
+			}
+		}
+		
+		//날짜 형식
+		function formatTimestamp(timestamp) {
+			   const date = new Date(timestamp);
 
-		// 모든 요소를 선택
-		const inputElement3 = document
-				.querySelector(".search_input_status");
-		inputElement3.value = "all";
-	}
+			   const year = date.getFullYear();
+			   const month = String(date.getMonth() + 1).padStart(2, '0');
+			   const day = String(date.getDate()).padStart(2, '0');
+			   const hours = String(date.getHours()).padStart(2, '0');
+			   const minutes = String(date.getMinutes()).padStart(2, '0');
+			   const seconds = String(date.getSeconds()).padStart(2, '0');
+			   const milliseconds = date.getMilliseconds();
+
+			   const formattedTimestamp = `${year}-${month}-${day} ${hours}:${minutes}:${seconds}:${milliseconds}`;
+
+			   return formattedTimestamp;
+		}
 	</script>
 </body>
 </html>
