--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -46,7 +46,7 @@
 						</tr>
 					</thead>
 					<tbody class="class_list_table_tbody">
-						<tr id="class_list" th:each="class:${classList}">
+						<tr id="class_list" th:each="class:${classList}" class="class_list_table_row">
 							<td th:text="${classStat.count}">row number</td>
 							<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
 							<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|">
@@ -61,16 +61,19 @@
 		<!-- END : content wrap-->
 	</div>
 
-	<script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script type="text/javascript"> 
 		$(document).ready(function () {
 			const chkAll = $("#chkAll");
 			const chkList = $("input[name=chk]");
+			
 			// "전체" 체크박스의 상태에 따라 나머지 체크박스의 상태를 변경
 			chkAll.on("change", function () {
 				const isChecked = chkAll.prop("checked");
 				chkList.prop("checked", isChecked);
 				fetchClassList();
 			});
+			
 			//개별 체크박스가 변경될 때 "전체" 체크박스 상태 업데이트
 			chkList.on("change", function () {
 				const allChecked = chkList.filter(":checked").length === chkList.length;
@@ -88,10 +91,10 @@
 				});
 				return checkedItems;
 			}
-			
+
 			//체크된 목록을 받아 ajax로 class list 반환
-			var filterString = getCheckedItems();
 			function fetchClassList() {
+				var filterString = getCheckedItems();
 				console.log(filterString);
 				$.ajax({
 					url : "/manager/class/filter", // 컨트롤러 엔드포인트
@@ -102,16 +105,58 @@
 					success : function(classListResponse) {
 						//서버에서 받은 응답 파싱하여 객체로 생성
 						var filteredClassList = classListResponse.classList;
-						console.log(filteredClassList);
+						var tbody =$("tbody");
+						tbody.addClass('class_list_table_tbody');
+						tbody.empty();
+					
+						for (let i=0;i<filteredClassList.length;i++) {
+							
+							var newRow = document.createElement('tr');
+							newRow.classList.add('class_list_table_row');
+							newRow.id='class_list';
+// 							newRow.attr('id','class_list');
+							
+							var classRowNum =	document.createElement('td');
+							var className =		document.createElement('td');
+							var classPeriod =	document.createElement('td');
+							var classAddress =	document.createElement('td');
+							var classCnt =		document.createElement('td');
+							var classLimit =	document.createElement('span');
+							var classRgst =		document.createElement('a');
+							var classClssCd =	document.createElement('td');
+							
+							classRowNum.innerHTML=i+1;
+							var classNameA = document.createElement('a');
+							classNameA.innerHTML=filteredClassList[i].clssNm;
+							classNameA.setAttribute('href','/manager/class/'+filteredClassList[i].clssId);
+							className.appendChild(classNameA);
+
+							classPeriod.innerHTML=filteredClassList[i].clssStartDd+" ~ "+filteredClassList[i].clssEndDd;
+							classAddress.innerHTML=filteredClassList[i].clssAdr;
+							classRgst.innerHTML=filteredClassList[i].rgstCnt;
+							classRgst.setAttribute('href','/manager/student?classId='+filteredClassList[i].rgstCnt);
+							classLimit.innerHTML="/"+filteredClassList[i].limitCnt;
+							classCnt.appendChild(classRgst);
+							classCnt.appendChild(classLimit);
+							classClssCd.innerHTML=filteredClassList[i].clssCd;
+
+							//ㅇㅋ>>>
+							newRow.appendChild(classRowNum);
+							newRow.appendChild(className);
+							newRow.appendChild(classPeriod);
+							newRow.appendChild(classAddress);
+							newRow.appendChild(classCnt);
+							newRow.appendChild(classClssCd);
+							tbody[0].appendChild(newRow);
+							//<<<ㅇㅋ
+						}
 					},
 					error : function(error) {
 						console.log("Error : ",error)
 					}
 				});
 			}
-			
 		});
-		
 	</script>
 </body>
 </html>
