--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -51,7 +51,7 @@
 							<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
 							<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|">
 							<td th:text="${class.clssAdr}">class address</td>
-							<td><a th:text="${class.rgstCnt}" th:href="@{/manager/student?classId=__${class.clssId}__}"></a><span th:text="|/ ${class.limitCnt}|"></span></td>
+							<td><a th:text="${class.rgstCnt}" th:href="@{/manager/student?classId=__${class.clssId}__}"></a><span th:text="|/${class.limitCnt}|"></span></td>
 							<td th:text="${class.clssCd}">status</td>
 						</tr>
 					</tbody>
@@ -134,7 +134,7 @@
 							classPeriod.innerHTML=filteredClassList[i].clssStartDd+" ~ "+filteredClassList[i].clssEndDd;
 							classAddress.innerHTML=filteredClassList[i].clssAdr;
 							classRgst.innerHTML=filteredClassList[i].rgstCnt;
-							classRgst.setAttribute('href','/manager/student?classId='+filteredClassList[i].rgstCnt);
+							classRgst.setAttribute('href','/manager/student?classId='+filteredClassList[i].clssId);
 							classLimit.innerHTML="/"+filteredClassList[i].limitCnt;
 							classCnt.appendChild(classRgst);
 							classCnt.appendChild(classLimit);
